# yaiba

./: .env  .gitignore  Cargo.toml  LICENSE.md  readme.md  sqlite.db
migrations/: 20231108101535_init.sql
src/: cache.rs  db.rs  main.rs  structs.rs
src/metadata/: memory.rs  mod.rs  sqlite.rs
src/storage/: fs.rs  memory.rs  mod.rs
src/tests/: mod.rs
