[package]
name = "yaiba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros"]}
hyper = { version = "0.14", features = ["full"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls" , "sqlite", "time" ] }
anyhow = "1"
dotenvy = "0.15"
serde = "1.0.192"
serde_json = "1.0.108"
tokio-util = "0.7.10"
tokio-stream = "0.1.14"
