[package]
name = "yaiba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["server", "server-auto"] }
http-body-util = "0.1.3"
http-body = "1.0.1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = [
    "compat",
    "io",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "time",
] }
anyhow = "1"
dotenvy = "0.15"
serde = "1"
serde_json = "1"
tokio-stream = { features = ["sync"], version = "0.1" }
bytes = "1.9.0"
async-trait = "0.1.85"
dashmap = "6.1.0"
mockall = "0.13.1"
tower-http = { version = "0.6.2", features = ["cors"] }
